[gd_scene load_steps=6 format=3 uid="uid://vnsl4vf3f0ip"]

[ext_resource type="Script" path="res://globals/scene_manager/scene_manager.gd" id="1_wh678"]

[sub_resource type="Animation" id="Animation_7otkw"]
resource_name = "FADE_TO_BLACK"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionLayer/TransitionOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_1weo5"]
resource_name = "FADE_TO_NORMAL"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionLayer/TransitionOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dkarj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionLayer/TransitionOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpoje"]
_data = {
"FADE_TO_BLACK": SubResource("Animation_7otkw"),
"FADE_TO_NORMAL": SubResource("Animation_1weo5"),
"RESET": SubResource("Animation_dkarj")
}

[node name="SceneManager" type="Node"]
script = ExtResource("1_wh678")

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="TransitionOverlay" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TransitionAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rpoje")
}
